docs: 📝 添加将脚本分享到推特的徽章
https://github.com/adamlui/userscripts/blob/3f0f209281f358faa9b8f3c4ff2fd23e0e3a0de9/docs/README.md?plain=1#L14

Co-authored-by: adamlui <adam@kudoai.com>

--- a/utils/templates/ScriptCard.html
+++ b/utils/templates/ScriptCard.html
@@ -4,6 +4,9 @@
     <a href="https://github.com/ChinaGodMan/UserScripts/tree/main/{script_fold}">{script_name}</a>&nbsp;
     <a href="https://github.com/ChinaGodMan/UserScripts/tree/main/{script_fold}">
         <img height=24 src="https://img.shields.io/greasyfork/dt/{script_id}?logo=greasyfork&logoColor=white&labelColor=%23670000&color=%23670000&style=for-the-badge&label=%E7%94%A8%E6%88%B7%E6%95%B0%E9%87%8F"></a>
+    <a href="https://twitter.com/intent/tweet?text=Just%20discovered%20this%20epic%20userscript!&url=https://github.com/ChinaGodMan/UserScripts/tree/main/{script_fold}&hashtags=greasemonkey,userscripts,javascript">
+            <img src="https://img.shields.io/twitter/url/http/shields.io.svg?style=social" alt="Tweet">
+        </a>
 </h3>
 
 {details_block}
