docs(TOC): 📝 添加脚本列表导航

--- a/utils/templates/ScriptCard.html
+++ b/utils/templates/ScriptCard.html
@@ -22,5 +22,9 @@
         自述文件</a> /
     <a href="https://github.com/ChinaGodMan/UserScripts/discussions">
         <picture><source type="image/svg+xml" media="(prefers-color-scheme: dark)" srcset="https://assets.aiwebextensions.com/images/icons/speech-bubble-square/white.svg"><img height=12 src="https://assets.aiwebextensions.com/images/icons/speech-bubble-square/black.svg"></picture></a>
-    <a href="https://github.com/ChinaGodMan/UserScripts/discussions">讨论</a>
+    <a href="https://github.com/ChinaGodMan/UserScripts/discussions">讨论</a> /
+    <a href="https://github.com/ChinaGodMan/UserScripts/tree/main/{script_fold}/{js_name}">
+        <img hight=16 width=15 src="https://img.icons8.com/color/48/code.png">源码</a> /
+        <a href="https://github.com/ChinaGodMan/UserScripts/raw/main/{script_fold}/{js_name}">
+        <img hight=16 width=15 src="https://img.icons8.com/color/48/maintenance.png">安装</a>
 </blockquote>
