docs: 📝 每个脚本组下添加`返回目录`，增加脚本`更新日志`链接

--- a/utils/templates/ScriptCard.html
+++ b/utils/templates/ScriptCard.html
@@ -26,5 +26,5 @@
     <a href="https://github.com/ChinaGodMan/UserScripts/tree/main/{script_fold}/{js_name}">
         <img hight=16 width=15 src="https://img.icons8.com/color/48/code.png">源码</a> /
         <a href="https://github.com/ChinaGodMan/UserScripts/raw/main/{script_fold}/{js_name}">
-        <img hight=16 width=15 src="https://img.icons8.com/color/48/maintenance.png">安装</a>
+        <img hight=16 width=15 src="https://img.icons8.com/color/48/maintenance.png">安装</a>{changelog_block}
 </blockquote>
