--- a/utils/templates/ScriptCard.html
+++ b/utils/templates/ScriptCard.html
@@ -1,8 +1,8 @@
 <h3>
-    <a href="https://github.com/ChinaGodMan/UserScripts/tree/main/{script_fold}">
+    <a href="../{script_fold}">
         <picture><source type="image/png" media="(prefers-color-scheme: dark)" srcset="{icon}"><img width=18 src="{icon}" width=18></a>
-    <a href="https://github.com/ChinaGodMan/UserScripts/tree/main/{script_fold}">{script_name}</a>&nbsp;
-    <a href="https://github.com/ChinaGodMan/UserScripts/tree/main/{script_fold}">
+    <a href="../{script_fold}">{script_name}</a>&nbsp;
+    <a href="../{script_fold}">
         <img height=24 src="https://img.shields.io/greasyfork/dt/{script_id}?logo=greasyfork&logoColor=white&labelColor=%23670000&color=%23670000&style=for-the-badge&label=%E7%94%A8%E6%88%B7%E6%95%B0%E9%87%8F"></a>
     <a href="https://twitter.com/intent/tweet?text=Just%20discovered%20this%20epic%20userscript!&url=https://github.com/ChinaGodMan/UserScripts/tree/main/{script_fold}&hashtags=greasemonkey,userscripts,javascript">
             <img src="https://img.shields.io/twitter/url/http/shields.io.svg?style=social" alt="Tweet">
@@ -16,14 +16,14 @@
         <img height=13 src="https://github.com/ChinaGodMan/UserScriptsHistory/raw/main/images/icons/platforms/tampermonkey/icon28.png"><img height=13.5 src="https://github.com/ChinaGodMan/UserScriptsHistory/raw/main/images/svg/vm.svg"><img height=13 src="https://github.com/ChinaGodMan/UserScriptsHistory/raw/main/images/icons/platforms/scriptcat/icon108.png"><img height=13 src="https://github.com/ChinaGodMan/UserScriptsHistory/blob/main/images/icons/platforms/orangemonkey/icon112.png"></a>
     <a href="https://greasyfork.org/scripts/{script_id}">
         Greasemonkey</a> /
-    <a href="https://github.com/ChinaGodMan/UserScripts/tree/main/{script_fold}/#readme">
+    <a href="../{script_fold}/#readme">
         <picture><source type="image/svg+xml" media="(prefers-color-scheme: dark)" srcset="https://assets.aiwebextensions.com/images/icons/paper-sheet/white.svg"><img height=13 src="https://assets.aiwebextensions.com/images/icons/paper-sheet/black.svg"></picture></a>
-    <a href="https://github.com/ChinaGodMan/UserScripts/tree/main/{script_fold}/#readme">
+    <a href="../{script_fold}/#readme">
         自述文件</a> /
     <a href="https://github.com/ChinaGodMan/UserScripts/discussions">
         <picture><source type="image/svg+xml" media="(prefers-color-scheme: dark)" srcset="https://assets.aiwebextensions.com/images/icons/speech-bubble-square/white.svg"><img height=12 src="https://assets.aiwebextensions.com/images/icons/speech-bubble-square/black.svg"></picture></a>
     <a href="https://github.com/ChinaGodMan/UserScripts/discussions">讨论</a> /
-    <a href="https://github.com/ChinaGodMan/UserScripts/tree/main/{script_fold}/{js_name}">
+    <a href="../{script_fold}/{js_name}">
         <img hight=16 width=15 src="https://img.icons8.com/color/48/code.png">源码</a> /
         <a href="https://github.com/ChinaGodMan/UserScripts/raw/main/{script_fold}/{js_name}">
         <img hight=16 width=15 src="https://img.icons8.com/color/48/maintenance.png">安装</a>{changelog_block}{author_block}
