build: 仓库名称等可能更改，改成可替换的

--- a/utils/templates/CHANGELOG.html
+++ b/utils/templates/CHANGELOG.html
@@ -2,9 +2,9 @@
     <h1>{name}</h1>
     <p>「 {description} 」</p>
     <img src="https://views.whatilearened.today/views/github/{greasyfork_id}/hmjz100.svg" alt="Views">
-    <img src="https://img.shields.io/github/size/ChinaGodMan/UserScripts/{filepath}?color=%23990000">
-    <p>Download:<a href="https://github.com/ChinaGodMan/UserScripts/tree/main/{backuppath}">Github</a> | ⭐<a
+    <img src="https://img.shields.io/github/size/{repo_name}/{filepath}?color=%23990000">
+    <p>Download:<a href="https://github.com/{repo_name}/tree/main/{backuppath}">Github</a> | ⭐<a
             href="https://greasyfork.org/zh-CN/scripts/{greasyfork_id}">Greasy
             Fork</a></p>{readme_html}
-    <img src="https://raw.githubusercontent.com/ChinaGodMan/UserScriptsHistory/main/stats/{greasyfork_id}.png">
+    <img src="https://raw.githubusercontent.com/{sub_repo_name}/main/stats/{greasyfork_id}.png">
 </div></center>
