--- a/utils/templates/ScriptCard.html
+++ b/utils/templates/ScriptCard.html
@@ -16,9 +16,9 @@
         <img height=13 src="https://github.com/{sub_repo_name}/raw/main/images/icons/platforms/tampermonkey/icon28.png"><img height=13.5 src="https://github.com/{sub_repo_name}/raw/main/images/svg/vm.svg"><img height=13 src="https://github.com/{sub_repo_name}/raw/main/images/icons/platforms/scriptcat/icon108.png"><img height=13 src="https://github.com/{sub_repo_name}/blob/main/images/icons/platforms/orangemonkey/icon112.png"></a>
     <a href="https://greasyfork.org/scripts/{script_id}">
         Greasemonkey</a> /
-    <a href="../{script_fold}/#readme">
+    <a href="../{script_fold}/{readme_file}">
         <picture><source type="image/svg+xml" media="(prefers-color-scheme: dark)" srcset="https://assets.aiwebextensions.com/images/icons/paper-sheet/white.svg"><img height=13 src="https://assets.aiwebextensions.com/images/icons/paper-sheet/black.svg"></picture></a>
-    <a href="../{script_fold}/#readme">
+    <a href="../{script_fold}/{readme_file}">
         自述文件</a> /
     <a href="https://github.com/{repo_name}/discussions">
         <picture><source type="image/svg+xml" media="(prefers-color-scheme: dark)" srcset="https://assets.aiwebextensions.com/images/icons/speech-bubble-square/white.svg"><img height=12 src="https://assets.aiwebextensions.com/images/icons/speech-bubble-square/black.svg"></picture></a>
