--- a/utils/templates/ScriptCard.html
+++ b/utils/templates/ScriptCard.html
@@ -2,8 +2,8 @@
     <a href="../{script_fold}">
         <picture><source type="image/png" media="(prefers-color-scheme: dark)" srcset="{icon}"><img width=18 src="{icon}" width=18></a>
     <a href="../{script_fold}">{script_name}</a>&nbsp;
-    <a href="../{script_fold}">
-        <img height=24 src="https://img.shields.io/greasyfork/dt/{script_id}?logo=greasyfork&logoColor=white&labelColor=%23670000&color=%23670000&style=for-the-badge&label=%E7%94%A8%E6%88%B7%E6%95%B0%E9%87%8F"></a>
+    <a href="https://{domain}/scripts/{script_id}">
+        <img src="https://img.shields.io/greasyfork/dt/{script_id}?logo=greasyfork&logoColor=white&labelColor=%23670000&color=blue&label=%E7%94%A8%E6%88%B7%E6%95%B0%E9%87%8F"></a>
     <a href="https://twitter.com/intent/tweet?text=Just%20discovered%20this%20epic%20userscript!&url=https://github.com/{repo_name}/tree/main/{script_fold}&hashtags=greasemonkey,userscripts,javascript">
             <img src="https://img.shields.io/twitter/url/http/shields.io.svg?style=social" alt="Tweet">
         </a>
@@ -12,9 +12,9 @@
 {details_block}
 
 <blockquote>
-    <a href="https://greasyfork.org/scripts/{script_id}">
+    <a href="https://{domain}/scripts/{script_id}">
         <img height=13 src="https://github.com/{sub_repo_name}/raw/main/images/icons/platforms/tampermonkey/icon28.png"><img height=13.5 src="https://github.com/{sub_repo_name}/raw/main/images/svg/vm.svg"><img height=13 src="https://github.com/{sub_repo_name}/raw/main/images/icons/platforms/scriptcat/icon108.png"><img height=13 src="https://github.com/{sub_repo_name}/blob/main/images/icons/platforms/orangemonkey/icon112.png"></a>
-    <a href="https://greasyfork.org/scripts/{script_id}">
+    <a href="https://{domain}/scripts/{script_id}">
         Greasemonkey</a> /
     <a href="../{script_fold}/{readme_file}">
         <picture><source type="image/svg+xml" media="(prefers-color-scheme: dark)" srcset="https://assets.aiwebextensions.com/images/icons/paper-sheet/white.svg"><img height=13 src="https://assets.aiwebextensions.com/images/icons/paper-sheet/black.svg"></picture></a>
