--- a/utils/templates/OVERVIEW.html
+++ b/utils/templates/OVERVIEW.html
@@ -3,6 +3,7 @@
     <p>「 {description} 」</p>
     <img src="https://views.whatilearened.today/views/github/{greasyfork_id}/hmjz100.svg" alt="Views">
     <img src="https://img.shields.io/github/size/{repo_name}/{filepath}?color=%23990000">
+    <img src="https://img.shields.io/greasyfork/dt/{greasyfork_id}?logo=greasyfork&logoColor=white&labelColor=%23670000&color=blue&label=%E7%94%A8%E6%88%B7%E6%95%B0%E9%87%8F">
     <img src="https://img.shields.io/badge/dynamic/json?&label=%E6%AF%8F%E6%97%A5%E6%A3%80%E6%9F%A5%E6%9B%B4%E6%96%B0%E6%AC%A1%E6%95%B0&query=$.{greasyfork_id}&logo=greasyfork&logoColor=white&labelColor=%23670000&color=blue&url=https://github.com/{sub_repo_name}/raw/main/daily_update_checks.json">
     <p>Download:<a href="https://github.com/{repo_name}/tree/main/{backuppath}">Github</a> | ⭐<a
             href="https://greasyfork.org/scripts/{greasyfork_id}">Greasy
